@@ -2,6 +2,7 @@
 - support :select option in ActiveRecord.find
 - expose open_mutator, flush_mutator and close_mutator methods to HyperRecord
   to help speed up write-heavy applications
+- don't duplicate cells unnecessarily while assembling rows
 
 0.2.3 on 2009/03/18 [tyler.kovacs]
 - optimize writes by using set_cells_as_arrays to write data in cell native
